create three cards

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </div>
             <button>Узнать стоимость</button>
         </div>
+        
         <div class="section portfolio">
             <h3>Примеры моих работ</h3>
             <div class="cards">
@@ -111,5 +112,48 @@
         <footer>
             <p>Батырхан Толубаев. 2003-2090</p>
         </footer>
+        <div class="main">
+            <div class="threeCard">
+                <div class="card">
+                    <div class="front">
+                        <span>
+                            <img src="images/icons/coding (1).png" alt="">
+                            <p class="name">30</p>
+                        </span>
+                    </div>
+                    <div class="back"> 
+                        <span>
+                            Some text
+                        </span>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <span>
+                            <img src="images/icons/coding (1).png" alt="">
+                            <p class="name">30</p>
+                        </span>
+                    </div>
+                    <div class="back">
+                        <span>
+                            Some text
+                        </span>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <span>
+                            <img src="images/icons/coding (1).png" alt="">
+                            <p class="name">30</p>
+                        </span>
+                    </div>
+                    <div class="back"> 
+                        <span>
+                            Some text
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
